PoC/Ingress/ingress-path.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: www.dominio.local
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: hello-v1-svc
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: hello-v2-svc
            port:
              number: 80
